# c-signal-system

./: CMakeLists.txt  build.sh  leaks.sh
.cache/clangd/index/: main.c.06251236A7F96E71.idx  signal.c.4EF78B4FF87E15BC.idx  signal.h.B9073D368B0989F2.idx
src/: main.c  signal.c  signal.h
